docs: updated forgot password and history documentation
